--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -1,3 +1,18 @@
+@use "@angular/material" as mat;
+
+@mixin app-root-theme($theme) {
+  $theme-colors: mat.get-color-config($theme);
+  $backgrounds: map-get($theme-colors, background);
+
+  app-root {
+    app-dashboard-layout {
+      display: block;
+      background: mat.get-color-from-palette($backgrounds, background);
+      min-height: 100vh;
+    }
+  }
+}
+
 :root {
   // Setting 1rem to 10px
   font-size: 62.5%;
