--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,46 +1,14 @@
-// Project Level Variables
-// Fonts
-$font-weights: (
-  "thin": 100,
-  "thin-200": 200,
-  "light": 300,
-  "regular": 400,
-  "medium": 500,
-  "bold": 700,
-  "black": 900,
-);
+@use "@angular/material/" as mat;
+@include mat.core();
 
-@function font-weight($font-weight-style) {
-  @return map-get($font-weights, $font-weight-style);
-}
+$snx-primary: mat.define-palette(mat.$indigo-palette, 500, 200, 800);
+$snx-accent: mat.define-palette(mat.$pink-palette);
+$snx-warn: mat.define-palette(mat.$red-palette);
 
-$font-sizes: (
-  "small": 1.1rem,
-  "smallFix": 1.2rem,
-  "regular": calc(1.3rem + 0.1389vw),
-  "regularFix": calc(1.4rem),
-  "normal": 1.6rem,
-  "normalFix": 1.8rem,
-  "medium": calc(1.8rem + 0.1389vw),
-  "largeFix": 2.4rem,
-  "large": calc(2.5rem + 0.15vw),
-  "xl": 3rem,
-  "xxl": 4rem,
-);
+// Extra Colors
+// $snx-success: mat.define-palette(mat.$green-palette);
+// $snx-info: mat.define-palette(mat.$orange-palette);
 
-@function font-size($font-size-style) {
-  @return map-get($font-sizes, $font-size-style);
-}
-
-$break-points: (
-  "break-point-small": 400px,
-  "break-point-medium": 600px,
-  "break-point-tablet": 800px,
-  "break-point-custom-tablet": 1100px,
-  "break-point-desktop": 1300px,
-  "break-point-desktop-hd": 1450px,
-);
-
-@function break-point($key) {
-  @return map-get($break-points, "break-point-" + $key);
-}
+$primary: mat.get-color-from-palette($snx-primary);
+$accent: mat.get-color-from-palette($snx-accent);
+$warn: mat.get-color-from-palette($snx-warn);
