--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -22,3 +22,44 @@ body {
   font-family: "Roboto", sans-serif;
   line-height: 1.9;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+// .mat-form-field, .mat-form-field {
+//   width: 100%;
+//   margin-bottom: 10px;
+// }
+
+$spaceamounts: (
+  5,
+  10,
+  15,
+  20,
+  25,
+  30,
+  35,
+  40,
+  45,
+  50,
+  55,
+  60,
+  65,
+  70,
+  75,
+  80,
+  85,
+  90,
+  95,
+  100
+);
+
+@each $space in $spaceamounts {
+  .w-#{$space} {
+    width: #{$space}#{'%'};
+  }
+}
