--- a/src/styles/features/auth/_auth.scss
+++ b/src/styles/features/auth/_auth.scss
@@ -1,1 +1,71 @@
-// Authentication
+@import "../../base/variables";
+
+.auth-layout {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $primary;
+
+  & .logo-corner {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+
+  .auth-container-layout {
+    width: 100%;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    & .section-logo {
+      flex-basis: 50%;
+      min-width: 32rem;
+      align-self: flex-start;
+
+      & .logo {
+        margin-bottom: 2rem;
+      }
+    }
+
+    & .section-form {
+      flex-basis: 30%;
+      min-width: 36rem;
+      padding: 4rem 2rem;
+      border-radius: 20px;
+
+      & .auth-form {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+
+        & .forgot-password {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          margin-bottom: 3rem;
+
+          & .forgot-password-label {
+            color: #000;
+            text-decoration: underline;
+            transition: 0.5s;
+            opacity: 0.95;
+
+          }
+
+          & .forgot-password-label:hover {
+            color: #000;
+            text-decoration: none;
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+}
