--- a/src/styles/features/auth/_auth.scss
+++ b/src/styles/features/auth/_auth.scss
@@ -33,16 +33,44 @@
     }
 
     & .section-form {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      flex-direction: column;
+
       flex-basis: 30%;
-      min-width: 36rem;
+      width: 36rem;
       padding: 4rem 2rem;
       border-radius: 20px;
+      min-height: 48.5rem;
+
+      & .form-header {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: column;
+        min-height: 10rem;
+
+        & .header-back {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+        }
+
+        & .header-title {
+          display: flex;
+          align-items: flex-start;
+          justify-content: flex-start;
+          flex-direction: column;
+        }
+      }
 
       & .auth-form {
         display: flex;
         align-items: flex-start;
-        justify-content: flex-start;
+        justify-content: space-between;
         flex-direction: column;
+        min-height: 30rem;
 
         & .forgot-password {
           width: 100%;
@@ -56,7 +84,6 @@
             text-decoration: underline;
             transition: 0.5s;
             opacity: 0.95;
-
           }
 
           & .forgot-password-label:hover {
